adding links acces

--- a/calculadoras/calculadora_normal.html
+++ b/calculadoras/calculadora_normal.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Calculadora normal</h2>
+    <a href="../index.html">pagina Principal</a>
+    <a href="calculadora_scientifica.html">Next</a>
 </body>
 </html>
